upload all files and fix it

--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -1800,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "7ec56578",
    "metadata": {},
    "outputs": [
@@ -1843,6 +1843,7 @@
     "    plt.figure(figsize=(10,6))\n",
     "    sns.boxplot(x=filtered_df[col], y=filtered_df['Price'])\n",
     "    plt.title(f'Box plot of {col} vs Price')\n",
+    "    plt.show()\n",
     "    "
    ]
   }
